# knowledge-graph-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.json  server.py  smithery.yaml
knowledge_graph_mcp/: __init__.py
knowledge_graph_mcp/database/: __init__.py  connection.py  schema.py
knowledge_graph_mcp/models/: __init__.py  node.py
knowledge_graph_mcp/services/: __init__.py  mermaid_generator.py  query_engine.py
models/: edge.py  enums.py
services/: graph_service.py  spaced_repetition.py
