[project]
name = "knowledge-graph-mcp"
version = "0.1.0"
description = "MCP server for tracking student learning via a knowledge graph"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
knowledge-graph-mcp = "knowledge_graph_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_graph_mcp"]
